# dockertest

./: .cirrus.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile.linux  Dockerfile.rpi  Dockerfile.windows  README.md  appveyor.yml  hello.cpp
.circleci/: config.yml
.github/workflows/: ccpp.yml
