cmake_minimum_required(VERSION 3.0.0)
project (hello)
add_executable(hello hello.cpp)
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-static-libgcc" CXX_SUPPORTS_STATIC_LIBGCC)
if (CXX_SUPPORTS_STATIC_LIBGCC) 
  target_link_libraries (hello -static-libgcc)
endif()
CHECK_CXX_COMPILER_FLAG("-static-libstdc++" CXX_SUPPORTS_STATIC_LIBSTDCPP)
if (CXX_SUPPORTS_STATIC_LIBSTDCPP) 
  target_link_libraries (hello -static-libstdc++)
endif()
